# json_corrector

./: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml  wetup.py
.github/workflows/: python-publish.yml
json_corrector/: jc.py  jc_wrapper.py  test.py
json_creator/: jc.py
