[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "json_corrector"
version = "3.0.0"
authors = [
  { name="tschenkelz", email="tschenkelpieper@gmail.com" },
]
description = "A small example package"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
#license = "MIT"
license = {text = "MIT"}
#license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "https://github.com/tschenkelz/json_corrector"
Issues = "https://github.com/tschenkelz/json_corrector/issues"

[project.scripts]
jc = "json_corrector.jc:main"